@@ -51,18 +51,22 @@
 #define TV_FRAC tv_usec
 #define TV_MULT 1000000L
 
+#ifndef IOM_LIBEVENT
 #if IOM_IO
 static io_manager_vec<io_watcher>    iow;
-#endif
-#if IOM_CHECK
-static io_manager_vec<check_watcher> cw;
 #endif
 #if IOM_TIME
 static io_manager_vec<time_watcher>  tw;
 #endif
+#endif
+
+#if IOM_CHECK
+static io_manager_vec<check_watcher> cw;
+#endif
 #if IOM_IDLE
 static io_manager_vec<idle_watcher>  iw;
 #endif
+
 #if IOM_SIG
 static int sigpipe[2]; // signal signalling pipe
 static sigset_t sigs;
@@ -74,6 +78,7 @@ struct sig_vec : io_manager_vec<sig_watcher> {
 };
 static vector<sig_vec *> sw;
 #endif
+
 #if IOM_CHILD
 static io_manager_vec<child_watcher>  pw;
 #endif
@@ -154,6 +159,9 @@ static struct init {
 #ifdef IOM_PREINIT
     { IOM_PREINIT }
 #endif
+#ifdef IOM_LIBEVENT
+    event_init ();
+#endif
     iom_valid = true;
 
 #if IOM_SIG
@@ -229,19 +237,35 @@ void io_manager::unreg (watcher &w, io_manager_vec<watcher> &queue)
 }
 
 #if IOM_TIME
+# ifdef IOM_LIBEVENT
+  void iom_time_c_callback (int fd, short events, void *data)
+  {
+    time_watcher *w = static_cast<time_watcher *>(data);
+    w->call (*w);
+  }
+# else
+  void io_manager::reg   (time_watcher &w)  { io_manager::reg   (w, tw); }
+  void io_manager::unreg (time_watcher &w)  { io_manager::unreg (w, tw); }
+# endif
+
 void time_watcher::trigger ()
 {
   call (*this);
-  io_manager::reg (*this);
+  start ();
 }
-
-void io_manager::reg   (time_watcher &w)  { io_manager::reg   (w, tw); }
-void io_manager::unreg (time_watcher &w)  { io_manager::unreg (w, tw); }
 #endif
 
 #if IOM_IO
-void io_manager::reg   (io_watcher &w)    { io_manager::reg   (w, iow); }
-void io_manager::unreg (io_watcher &w)    { io_manager::unreg (w, iow); }
+# ifdef IOM_LIBEVENT
+  void iom_io_c_callback (int fd, short events, void *data)
+  {
+    io_watcher *w = static_cast<io_watcher *>(data);
+    w->call (*w, events);
+  }
+# else
+  void io_manager::reg   (io_watcher &w)    { io_manager::reg   (w, iow); }
+  void io_manager::unreg (io_watcher &w)    { io_manager::unreg (w, iow); }
+# endif
 #endif
 
 #if IOM_CHECK
@@ -329,47 +353,48 @@ void io_manager::loop ()
 {
   init::required ();
 
-#if IOM_TIME
-  set_now ();
-#endif
+  #if IOM_TIME
+    set_now ();
+  #endif
 
   for (;;)
     {
+      #ifndef IOM_LIBEVENT
+      #if IOM_TIME
+        // call pending time watchers
+        {
+          bool activity;
 
-#if IOM_TIME
-      // call pending time watchers
-      {
-        bool activity;
+          do
+            {
+              activity = false;
 
-        do
-          {
-            activity = false;
+              for (int i = tw.size (); i--; )
+                if (!tw[i])
+                  tw.erase_unordered (i);
+                else if (tw[i]->at <= NOW)
+                  {
+                    time_watcher &w = *tw[i];
+                    
+                    unreg (w);
+                    w.call (w);
 
-            for (int i = tw.size (); i--; )
-              if (!tw[i])
-                tw.erase_unordered (i);
-              else if (tw[i]->at <= NOW)
-                {
-                  time_watcher &w = *tw[i];
-                  
-                  unreg (w);
-                  w.call (w);
+                    activity = true;
+                  }
+            }
+          while (activity);
+        }
+      #endif
+      #endif
 
-                  activity = true;
-                }
-          }
-        while (activity);
-      }
-#endif
-
-#if IOM_CHECK
-      // call all check watchers
-      for (int i = cw.size (); i--; )
-        if (!cw[i])
-          cw.erase_unordered (i);
-        else
-          cw[i]->call (*cw[i]);
-#endif
+      #if IOM_CHECK
+        // call all check watchers
+        for (int i = cw.size (); i--; )
+          if (!cw[i])
+            cw.erase_unordered (i);
+          else
+            cw[i]->call (*cw[i]);
+      #endif
 
       struct TIMEVAL *to = 0;
       struct TIMEVAL tval;
@@ -383,24 +408,25 @@ void io_manager::loop ()
         }
       else
 #endif
+#ifndef IOM_LIBEVENT
         {
-#if IOM_TIME
-          // find earliest active watcher
-          time_watcher *next = tw[0]; // the first time-watcher must exist at ALL times
+          #if IOM_TIME
+            // find earliest active watcher
+            time_watcher *next = tw[0]; // the first time-watcher must exist at ALL times
 
-          for (io_manager_vec<time_watcher>::const_iterator i = tw.end (); i-- > tw.begin (); )
-            if (*i && (*i)->at < next->at)
-              next = *i;
+            for (io_manager_vec<time_watcher>::const_iterator i = tw.end (); i-- > tw.begin (); )
+              if (*i && (*i)->at < next->at)
+                next = *i;
 
-          if (next->at > NOW && next != tw[0])
-            {
-              double diff = next->at - NOW;
-              tval.tv_sec  = (int)diff;
-              tval.TV_FRAC = (int) ((diff - tval.tv_sec) * TV_MULT);
-              to = &tval;
-            }
+            if (next->at > NOW && next != tw[0])
+              {
+                double diff = next->at - NOW;
+                tval.tv_sec  = (int)diff;
+                tval.TV_FRAC = (int) ((diff - tval.tv_sec) * TV_MULT);
+                to = &tval;
+              }
+          #endif
         }
-#endif
 
 #if IOM_IO || IOM_SIG
       fd_set rfd, wfd;
@@ -410,96 +436,108 @@ void io_manager::loop ()
 
       int fds = 0;
 
-# if IOM_IO
-      for (io_manager_vec<io_watcher>::const_iterator i = iow.end (); i-- > iow.begin (); )
-        if (*i)
-          {
-            if ((*i)->events & EVENT_READ ) FD_SET ((*i)->fd, &rfd);
-            if ((*i)->events & EVENT_WRITE) FD_SET ((*i)->fd, &wfd);
+      #if IOM_IO
+        for (io_manager_vec<io_watcher>::const_iterator i = iow.end (); i-- > iow.begin (); )
+          if (*i)
+            {
+              if ((*i)->events & EVENT_READ ) FD_SET ((*i)->fd, &rfd);
+              if ((*i)->events & EVENT_WRITE) FD_SET ((*i)->fd, &wfd);
 
-            if ((*i)->fd >= fds) fds = (*i)->fd + 1;
-          }
-# endif
+              if ((*i)->fd >= fds) fds = (*i)->fd + 1;
+            }
+      #endif
 
       if (!to && !fds) //TODO: also check idle_watchers and check_watchers?
         break; // no events
 
-# if IOM_SIG
-      FD_SET (sigpipe[0], &rfd);
-      if (sigpipe[0] >= fds) fds = sigpipe[0] + 1;
-# endif
+      #if IOM_SIG
+        FD_SET (sigpipe[0], &rfd);
+        if (sigpipe[0] >= fds) fds = sigpipe[0] + 1;
+      #endif
 
-# if IOM_SIG
-      // there is no race, as we use a pipe for signals, so select
-      // will return if a signal is caught.
-      sigprocmask (SIG_UNBLOCK, &sigs, NULL);
-# endif
+      #if IOM_SIG
+        // there is no race, as we use a pipe for signals, so select
+        // will return if a signal is caught.
+        sigprocmask (SIG_UNBLOCK, &sigs, NULL);
+      #endif
       fds = select (fds, &rfd, &wfd, NULL, to);
-# if IOM_SIG
-      sigprocmask (SIG_BLOCK, &sigs, NULL);
-# endif
+      #if IOM_SIG
+        sigprocmask (SIG_BLOCK, &sigs, NULL);
+      #endif
 
-# if IOM_TIME
-      {
-        // update time, try to compensate for gross non-monotonic time changes
-        tstamp diff = NOW;
-        set_now ();
-        diff = NOW - diff;
+#else
+      if (to)
+        event_loop (EVLOOP_NONBLOCK);
+      else
+        event_loop (EVLOOP_ONCE);
+#endif
 
-        if (diff < 0)
-          for (io_manager_vec<time_watcher>::const_iterator i = tw.end (); i-- > tw.begin (); )
-            if (*i)
-              (*i)->at += diff;
-      }
-# endif
+      #if IOM_TIME
+        {
+          // update time, try to compensate for gross non-monotonic time changes
+          tstamp diff = NOW;
+          set_now ();
+          diff = NOW - diff;
 
+          if (diff < 0)
+            for (io_manager_vec<time_watcher>::const_iterator i = tw.end (); i-- > tw.begin (); )
+              if (*i)
+                (*i)->at += diff;
+        }
+      #endif
+
+#ifndef IOM_LIBEVENT
       if (fds > 0)
         {
-# if IOM_SIG
-          if (FD_ISSET (sigpipe[0], &rfd))
-            {
-              char ch;
-
-              while (read (sigpipe[0], &ch, 1) > 0)
-                ;
-
-              for (vector<sig_vec *>::iterator svp = sw.end (); svp-- > sw.begin (); )
-                if (*svp && (*svp)->pending)
-                  {
-                    sig_vec &sv = **svp;
-                    for (int i = sv.size (); i--; )
-                      if (!sv[i])
-                        sv.erase_unordered (i);
-                      else
-                        sv[i]->call (*sv[i]);
-
-                    sv.pending = false;
-                  }
-            }
-# endif
-
-# if IOM_IO
-          for (int i = iow.size (); i--; )
-            if (!iow[i])
-              iow.erase_unordered (i);
-            else
+          #if IOM_SIG
+            if (FD_ISSET (sigpipe[0], &rfd))
               {
-                io_watcher &w = *iow[i];
-                short revents = w.events;
+                char ch;
 
-                if (!FD_ISSET (w.fd, &rfd)) revents &= ~EVENT_READ;
-                if (!FD_ISSET (w.fd, &wfd)) revents &= ~EVENT_WRITE;
+                while (read (sigpipe[0], &ch, 1) > 0)
+                  ;
 
-                if (revents)
-                  w.call (w, revents);
+                for (vector<sig_vec *>::iterator svp = sw.end (); svp-- > sw.begin (); )
+                  if (*svp && (*svp)->pending)
+                    {
+                      sig_vec &sv = **svp;
+                      for (int i = sv.size (); i--; )
+                        if (!sv[i])
+                          sv.erase_unordered (i);
+                        else
+                          sv[i]->call (*sv[i]);
+
+                      sv.pending = false;
+                    }
               }
-#endif
+          #endif
+
+          #if IOM_IO
+            for (int i = iow.size (); i--; )
+              if (!iow[i])
+                iow.erase_unordered (i);
+              else
+                {
+                  io_watcher &w = *iow[i];
+                  short revents = w.events;
+
+                  if (!FD_ISSET (w.fd, &rfd)) revents &= ~EVENT_READ;
+                  if (!FD_ISSET (w.fd, &wfd)) revents &= ~EVENT_WRITE;
+
+                  if (revents)
+                    w.call (w, revents);
+                }
+          #endif
         }
       else if (fds < 0 && errno != EINTR)
         {
           perror ("io_manager: fatal error while waiting for I/O or time event, aborting.");
           abort ();
         }
+#else
+      if (0)
+        ;
+#endif
 #if IOM_IDLE
       else
         for (int i = iw.size (); i--; )
@@ -513,9 +551,8 @@ void io_manager::loop ()
       if (!to)
         break;
 
-      select (0, 0, 0, 0, &to);
+      select (0, 0, 0, 0, to);
       set_now ();
-#else
       break;
 #endif
     }
